--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Osmania University Materials
 description: Free resources, notes, and materials for OU students
 theme: minima
 baseurl: "" # Keep blank for GitHub Pages
-url: "https://your-username.github.io/osmania-materials"
+url: "http://ouprephub.github.io/"
